tests/rpm-pkgs/cracklib-2.9.6-27.fc35/output-exp@valgrind/scan-results.err
Error: COMPILER_WARNING (CWE-563):
cracklib-2.9.6/lib/fascist.c: scope_hint: In function 'FascistLookUser'
cracklib-2.9.6/lib/fascist.c:714:11: warning[-Wunused-variable]: unused variable 'maxrepeat'
#  714 |     int i,maxrepeat;
#      |           ^~~~~~~~~
#  712|   		const char *user, const char *gecos)
#  713|   {
#  714|->     int i,maxrepeat;
#  715|       char *ptr;
#  716|       char *jptr;

Error: COMPILER_WARNING:
cracklib-2.9.6/lib/packlib.c:21:19: warning[-Wunused-const-variable=]: 'vers_id' defined but not used
#   21 | static const char vers_id[] = "packlib.c : v2.3p2 Alec Muffett 18 May 1993";
#      |                   ^~~~~~~
#   19|   #include "packer.h"
#   20|   
#   21|-> static const char vers_id[] = "packlib.c : v2.3p2 Alec Muffett 18 May 1993";
#   22|   
#   23|   #define DEBUG 0

Error: COMPILER_WARNING:
cracklib-2.9.6/lib/rules.c:7:19: warning[-Wunused-const-variable=]: 'vers_id' defined but not used
#    7 | static const char vers_id[] = "rules.c : v5.0p3 Alec Muffett 20 May 1993";
#      |                   ^~~~~~~
#    5|    */
#    6|   
#    7|-> static const char vers_id[] = "rules.c : v5.0p3 Alec Muffett 20 May 1993";
#    8|   
#    9|   #include "config.h"

Error: COMPILER_WARNING:
cracklib-2.9.6/lib/stringlib.c:15:19: warning[-Wunused-const-variable=]: 'vers_id' defined but not used
#   15 | static const char vers_id[] = "stringlib.c : v2.3p2 Alec Muffett 18 May 1993";
#      |                   ^~~~~~~
#   13|   #include "packer.h"
#   14|   
#   15|-> static const char vers_id[] = "stringlib.c : v2.3p2 Alec Muffett 18 May 1993";
#   16|   
#   17|   char
